Correct tutor images and text alignment

--- a/take-6/assets/css/custom.css
+++ b/take-6/assets/css/custom.css
@@ -28,3 +28,9 @@ svg.bottom-wave path {
 #services img {
   max-height: 30vh;
 }
+
+.vertically-center-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
